# WavLM-codebooks

./: .gitignore  README.md  hubconf.py  pyproject.toml
example_scripts/: basic.py  extract_kmeans_units.py  extract_wavlm_features.py
kmeans/: train.py
wavlm/: WavLM.py  __init__.py
